--- a/logitch/templates/base.html
+++ b/logitch/templates/base.html
@@ -6,6 +6,7 @@
         body{background-color: #26282e;}
         .form-control{margin-right: 10px;}
         .table-success{color:#000;}
+        th{text-align: left;}
     </style>
 </head>
 <body>
@@ -18,9 +19,8 @@
     </div>
     <table class="table table-dark table-hover">
         <thead><tr>
-            <th width="175px">Timestamp</th> 
-            <th width="50px">Type</th>
-            <th width="150px">User</th> 
+            <th>Timestamp (UTC)</th> 
+            <th>User</th> 
             <th>Message</th>
         </tr></thead>
         <tbody>
@@ -28,16 +28,15 @@
             {% for log in logs %}
                 
                 <tr id="log-{{log['id']}}" {%if log_id == str(log['id']) %}class="table-success"{%end%}>
-                    <td><a href="/?channel={{url_escape(handler.get_argument('channel'))}}&context={{url_escape(str(log['created_at']))}}&log_id={{log['id']}}#log-{{log['id']}}"
+                    <td width="185px"><a href="/?channel={{url_escape(handler.get_argument('channel'))}}&context={{url_escape(str(log['created_at']))}}&log_id={{log['id']}}#log-{{log['id']}}"
                            title="Show context surrounding this time"
                         >
                         {{log['created_at']}}
                     </td>
-                    <td>{{render_type(log['type'])}}</td>
-                    <td><a href="/?channel={{url_escape(handler.get_argument('channel'))}}&user={{url_escape(log['user'])}}">
+                    <td width="150px"><a href="/?channel={{url_escape(handler.get_argument('channel'))}}&user={{url_escape(log['user'])}}">
                         {{escape(log['user'])}}
                     </a></td>
-                    <td>{{escape(log['message'])}}</td>
+                    <td>{{render_type(log['type'])}} {{escape(log['message'])}}</td>
                 </tr>
             {% end %}
         </tbody>
