Fixed redirect next

--- a/logitch/templates/base.html
+++ b/logitch/templates/base.html
@@ -9,6 +9,9 @@
         .form-control{margin-right: 10px;}
         .table-success{color:#000;}
         th{text-align: left;}
+        .table td, .table th {
+            padding: .45rem;
+        }
     </style>
     {% block head %}{% end %}
 </head>
