Added viewport meta for iOS

--- a/logitch/templates/base.html
+++ b/logitch/templates/base.html
@@ -4,6 +4,7 @@
     <title>Logitch</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.22/webcomponents-hi-ce.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <style>
         body{background-color: #26282e;}
         .form-control{margin-right: 10px;}
